# repqa

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/sessions/[id]/: page.tsx
frontend/src/app/sessions/[id]/label/: page.tsx
frontend/src/app/sessions/[id]/review/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/lib/: api.ts
scripts/: batch_process.py  eval_all.py  generate_labels.py  run_pipeline.py  train_model.py  tune_band_er.py
src/api/: labeling.py  main.py
src/ml/: bootstrap.py  dataset.py  eval.py  personalize.py  train_logreg.py
src/pipeline/: baseline.py  clipper.py  features.py  pose_extract.py  preprocess.py  rep_segment.py  report.py
src/pipeline/templates/: labeling.html  review_page.html  session_report.html
src/utils/: config.py  geometry.py  plotting.py  video.py
tests/: test_config.py
tests/api/: test_labeling.py  test_main.py
tests/ml/: test_bootstrap.py  test_dataset.py  test_eval.py  test_personalize.py  test_plotting.py  test_train_logreg.py
tests/pipeline/: conftest.py  test_baseline.py  test_clipper.py  test_features.py  test_pose_extract.py  test_preprocess.py  test_rep_segment.py  test_report.py
